--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   geocoding: ^3.0.0
   flutter_polyline_points: ^2.1.0
   flutter_stripe: ^11.4.0
+  flutter_dotenv: ^5.2.1
   
 
 dev_dependencies:
@@ -85,6 +86,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/fonts/
+    - .env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
